--- a/index.html
+++ b/index.html
@@ -111,44 +111,43 @@
           <section class="section">
             <h3 class="section-title">Jerry Seinfeld</h3>
             <div class="gallery-cast">
-              <div class="gallery-items">
-                <div class="cast-section">
-                  <img
-                    src="images\jerry2.jpg"
-                    class="cast-img"
-                    alt="jerry seinfeld"
-                  />
-                  <p class="cast-article">
-                    Jerome Allen Seinfeld (born April 29, 1954)[1] is an
-                    American stand-up comedian, actor, writer, and producer. He
-                    is best known for having played a semi-fictionalized version
-                    of himself in the sitcom Seinfeld (1989–1998), which he
-                    created and wrote with Larry David. The show aired on NBC
-                    from 1989 until 1998, becoming one of the most acclaimed and
-                    popular sitcoms of all time. As a stand-up comedian,
-                    Seinfeld specializes in observational comedy. In 2004,
-                    Comedy Central named him the 12th-greatest stand-up comedian
-                    of all time.Seinfeld was born in Brooklyn, New York City.
-                    His father, Kálmán Seinfeld, a sign painter, was Jewish and
-                    collected jokes that he heard while serving in World War II.
-                    His mother, Betty (née Hosni) and her parents, Selim and
-                    Salha Hosni, were Jews from Aleppo, Syria. Their nationality
-                    was stated as Turkish when they immigrated in 1917, as Syria
-                    was under the Ottoman Empire. Seinfeld has an older sister,
-                    Carolyn. Salha's mother Garez Dayan, Seinfeld's
-                    great-grandmother, was a member of the Dayan rabbinic
-                    family, who claim ancestry back to the Medieval Exilarchs,
-                    and from the Exilarchs back to the Biblical King David.
-                    Seinfeld's second cousin is musician and actor Evan
-                    Seinfeld. Seinfeld grew up in Massapequa, New York, and
-                    attended Massapequa High School on Long Island. At 16, he
-                    spent time volunteering in Kibbutz Sa'ar in Israel. He
-                    attended the State University of New York at Oswego, and
-                    transferred after his second year to Queens College, City
-                    University of New York, from which he graduated in 1976 with
-                    a degree in communications and theater.
-                  </p>
-                </div>
+              <div class="cast-item">
+                <img
+                  src="images\jerry seinfeld.jpg"
+                  class="cast-img"
+                  alt="jerry seinfeld"
+                />
+              </div>
+              <div class="cast-item">
+                <p class="cast-article">
+                  Jerome Allen Seinfeld (born April 29, 1954)[1] is an American
+                  stand-up comedian, actor, writer, and producer. He is best
+                  known for having played a semi-fictionalized version of
+                  himself in the sitcom Seinfeld (1989–1998), which he created
+                  and wrote with Larry David. The show aired on NBC from 1989
+                  until 1998, becoming one of the most acclaimed and popular
+                  sitcoms of all time. As a stand-up comedian, Seinfeld
+                  specializes in observational comedy. In 2004, Comedy Central
+                  named him the 12th-greatest stand-up comedian of all
+                  time.Seinfeld was born in Brooklyn, New York City. His father,
+                  Kálmán Seinfeld, a sign painter, was Jewish and collected
+                  jokes that he heard while serving in World War II. His mother,
+                  Betty (née Hosni) and her parents, Selim and Salha Hosni, were
+                  Jews from Aleppo, Syria. Their nationality was stated as
+                  Turkish when they immigrated in 1917, as Syria was under the
+                  Ottoman Empire. Seinfeld has an older sister, Carolyn. Salha's
+                  mother Garez Dayan, Seinfeld's great-grandmother, was a member
+                  of the Dayan rabbinic family, who claim ancestry back to the
+                  Medieval Exilarchs, and from the Exilarchs back to the
+                  Biblical King David. Seinfeld's second cousin is musician and
+                  actor Evan Seinfeld. Seinfeld grew up in Massapequa, New York,
+                  and attended Massapequa High School on Long Island. At 16, he
+                  spent time volunteering in Kibbutz Sa'ar in Israel. He
+                  attended the State University of New York at Oswego, and
+                  transferred after his second year to Queens College, City
+                  University of New York, from which he graduated in 1976 with a
+                  degree in communications and theater.
+                </p>
               </div>
             </div>
           </section>
@@ -159,7 +158,7 @@
             <a href="https://www.imdb.com/title/tt0120338/"
               ><img src="images\titanic.jpg" class="side-image" alt="titanic"
             /></a>
-            <p class="famous-title">
+            <p class="famous-article">
               84 years later, a 100 year-old woman named Rose DeWitt Bukater
               tells the story to her granddaughter Lizzy Calvert, Brock Lovett,
               Lewis Bodine, Bobby Buell and Anatoly Mikailavich on the Keldysh
